# lucky-vicky-DPO

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.py
infer/: __main__.py
src/: __main__.py  runner.py
src/data/: __init__.py  data_collator.py  data_loader.py
src/infer/: inferrer.py
src/model/: __init__.py  model_loader.py  models.py
src/train/: trainer.py
src/utils/: train_config.py
train/: __main__.py  runner.py
train/data/: __init__.py  data_collator.py  data_loader.py  datasets.py
train/model/: model_loader.py  models.py
train/train/: __init__.py  dpo_trainer.py  sft_trainer.py  trainer.py
train/utils/: __init__.py  constants.py  secrets.py  templates.py  train_config.py
train/utils/training/: __init__.py  debug_collator.py
