[project]
name = "LoRA"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Junnos ", email = "junnos.dev@gmail.com" }]
requires-python = ">= 3.11"
dependencies = ["pre-commit"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
LoRA = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
transformers = ">=4.41.2,<4.42"
peft = ">=0.11.1,<0.12"
datasets = ">=2.14.4,<2.15"
pytorch = ">=2.3.1,<2.4"
