[project]
name = "LoRA"
version = "0.1.0"
description = "Project for a LoRA training."
authors = [{ name = "Junnos ", email = "junnos.dev@gmail.com" }]
requires-python = ">= 3.11"
dependencies = ["setuptools", "pre-commit", "torch", "peft", "evaluate", "datasets", "accelerate", "bitsandbytes", "scikit-learn", "wandb", "trl", "transformers==4.40.0", "bump-my-version"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["train", "infer"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.system-requirements]
linux = "4.15.0"

[tool.pixi.pypi-dependencies]
LoRA = { path = ".", editable = true }

[tool.pixi.tasks]
### Train
train = { cmd = ["python", "-m", "train", "--is_ready_for_training", "True"] }
t = { depends-on = ["train"] }
train-debug = { cmd = ["python", "-m", "train"] }
td = { depends-on = ["train-debug"] }
train-dpo = { cmd = ["python", "-m", "train", "--_train_mode", "dpo"] }
tdpo = { depends-on = ["train-dpo"] }
train-epochs = { cmd = ["python", "-m", "train", "--epochs", "$EPOCHS"], env = { EPOCHS = "2" } }
te = { depends-on = ["train-epochs"] }

### Inference
infer = { cmd = ["python", "-m", "infer"] }
i = { depends-on = ["infer"] }

### Version
bump = { cmd = ["bump-my-version", "bump"] }
b = { depends-on = ["bump"] }

[tool.pixi.dependencies]
python = ">=3.11,<3.12"

[tool.pyright]
venv = "default"
venvPath = ".pixi/envs"

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = "--no-verify"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
